<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingTop="12dp"
        android:paddingStart="8dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        android:background="@drawable/card_background"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical"
            android:background="@drawable/card_background"
            >
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/person"
                app:shapeAppearanceOverlay="@style/ImageView"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/texts_space"
                android:fontFamily="@font/sans_bold"
                android:text="@string/name"
                android:textSize="@dimen/text_title"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/texts_space"
                android:fontFamily="@font/sans_medium"
                android:text="@string/jobTitle"
                android:textSize="@dimen/frame_texts"
                android:textColor="@color/job" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/texts_space"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/location_icon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sans_regular"
                    android:text="@string/location"
                    android:textSize="@dimen/location"
                    android:textColor="@color/location" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/sans_regular"
                    android:text="@string/reviews_value"
                    android:textColor="@color/black"
                    android:textSize="@dimen/frame_texts"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/sans_medium"
                        android:text="@string/rate_value"
                        android:textColor="@color/black"
                        android:textSize="@dimen/frame_texts"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star_icon"
                        />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="vertical"
            >

           <TextView
               android:layout_width="38dp"
               android:layout_height="20dp"
               android:layout_marginBottom="@dimen/texts_space"
               android:fontFamily="@font/sans_regular"
               android:background="@drawable/hours_icon"
               android:gravity="center"
               android:text="@string/time"
               android:textColor="@color/white"
               android:textSize="@dimen/frame_texts"
               />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/texts_space"
                android:fontFamily="@font/sans_medium"
                android:text="@string/country"
                android:textColor="@color/job"
                android:textSize="@dimen/frame_texts"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_regular"
                android:text="@string/date"
                android:textColor="@color/location"
                android:textSize="@dimen/frame_texts"
                />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>
